# CalibCamera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
Srcs/: Camera.h  CheckBoard.h  Utils.h
docs/: 01 理论部分：单目成像过程.md  02 实践部分：张正友标定法 - OpenCV实现.md
